AMD-40: Fixed slideout block collapse icon display.
Fixed an issue where hide and show icons in block headers
in the slideout side bar menu were not displayed.

--- a/style/custom.css
+++ b/style/custom.css
@@ -3301,6 +3301,15 @@ body#page-mod-assign-grader {
     position: static !important;
 }
 
+/* Display collapse icon in blocks in slide out menu */
+#sidebar-block .block_action {
+    position: absolute;
+    right: 0;
+    z-index: 2;
+    float: none;
+    display: block;
+}
+
 /* Override CSS Settings
 -------------------------*/
 [[setting:overridecss]]
